# ComfyUI-FileManaty

./: .gitignore  CHANGELOG.md  README.md  __init__.py  config.example.json  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml  release.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
filemanaty/: __init__.py  api.py  config.py  metadata.py  operations.py  security.py  thumbs.py
tests/: conftest.py  test_api.py  test_config.py  test_metadata.py  test_operations.py  test_security.py  test_thumbs.py
web/: api.js  clipboard.js  contextmenu.js  dialogs.js  dnd.js  filemanaty.js  selection.js  settings.js  tree.js
