[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-filemanaty"
version = "0.3.2"
description = "In-browser file manager for ComfyUI — browse, preview, upload, rename, move, copy, and trash files in configured roots"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "ComfyUI-FileManaty contributors" }]
keywords = ["comfyui", "file-manager", "extension"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9",
    "pytest-aiohttp>=1.0",
]

[project.urls]
Repository = "https://github.com/agarzon/ComfyUI-FileManaty"

[tool.setuptools.packages.find]
include = ["filemanaty*"]
exclude = ["tests*", "docker*", "web*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
xfail_strict = true
asyncio_mode = "auto"
