[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-filemanaty"
dynamic = ["version"]
description = "In-browser file manager for ComfyUI — browse, preview, upload, rename, move, copy, and trash files in configured roots"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ComfyUI-FileManaty contributors" }]
keywords = ["comfyui", "file-manager", "extension"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9",
    "pytest-aiohttp>=1.0",
]

[project.urls]
Repository = "https://github.com/agarzon/ComfyUI-FileManaty"

# ComfyUI Registry metadata (used by `comfy node publish`).
[tool.comfy]
PublisherId = "agarzon"       # https://registry.comfy.org/publishers/agarzon
DisplayName = "FileManaty"
Icon = "https://raw.githubusercontent.com/agarzon/ComfyUI-FileManaty/main/assets/icon.jpg"
Banner = "https://raw.githubusercontent.com/agarzon/ComfyUI-FileManaty/main/assets/banner.jpg"

[tool.comfy.version]
# version is dynamic (filemanaty.__version__); comfy-cli reads it from this source file
path = "filemanaty/__init__.py"

[tool.setuptools.dynamic]
version = { attr = "filemanaty.__version__" }

[tool.setuptools.packages.find]
include = ["filemanaty*"]
exclude = ["tests*", "docker*", "web*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--import-mode=importlib"
xfail_strict = true
asyncio_mode = "auto"
